[package]
name = "rsw-app"
version = "0.1.0"
authors = ["suren <suren-m>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.2"

rand = "0.8.1"
chrono = "0.4"
serde = "1.0.118"

rsw-lib = { git = "https://github.com/suren-m/rsw-lib", branch = "main"}